kubernetes/applications/ceph-storage/manifests/flarewatcher/flarewatcher-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flarewatcher
  namespace: flarewatcher
  labels:
    app: flarewatcher
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: flarewatcher
  template:
    metadata:
      labels:
        app: flarewatcher
    spec:
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: flarewatcher
          image: aleksanderurbaniak/flarewatcher:v1.0.4
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          securityContext:
            runAsUser: 1001
            runAsGroup: 1001
            runAsNonRoot: true
          volumeMounts:
            - name: data
              mountPath: /app/data
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "250m"
          readinessProbe:
            httpGet:
              path: /login
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /login
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: flarewatcher-data-pvc
