kubernetes/applications/ceph-storage/manifests/flarewatcher/flarewatcher-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flarewatcher-ingress
  namespace: flarewatcher
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - flarewatcher.example.com
  rules:
    - host: flarewatcher.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flarewatcher
                port:
                  number: 3000
